# readthedocs

./: .readthedocs.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: conventional-commit.yml
docs/: index.md
docs/architecture/installation/: index.md
docs/architecture/principle/: index.md  kubernetes-architecture.diagrams.py
docs/contributing/: pull-requests.md
docs/contributing/maintainer/: release-flow.md
docs/overview/: compatibility.md  features.md  overview.md
docs/screenshots/: index.md
docs/screenshots/claims/graph/: index.md
docs/screenshots/compositions/: index.md
docs/screenshots/xrds/: index.md
scripts/: generate-diagrams.py
