[tool.poetry]
name = "readthedocs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-autorefs = "^1.0.1"
mkdocs-click = "^0.8.1"
mkdocs-material = "^9.5.22"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.0"
typing-extensions = "^4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
