[tool.poetry]
name = "readthedocs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "*"
mkdocs-autorefs = "*"
mkdocs-click = "*"
mkdocs-material = "*"
mkdocs-material-extensions = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
typing-extensions = "*"
mkdocs-glightbox = "*"
diagrams = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
